1991-10-30  dickey@software.org

	* src/permit/src/permit.c:
	allow "-b" value to be "1", so we can make 'vcs' create
	initial-directories

1991-10-30  ste_cm@software.org

	* src/permit/src/permit.c: BASELINE Wed Oct 30 07:31:24 1991

1991-10-25  dickey@software.org

	* src/checkin/src/checkin.c:
	revised code of 'Filter(ed)', which used 'tmpfile()' to
	simplify the code which unlinked the filtered-file if no
	changes were made.  The 'tmpfile()' procedure resets the
	effective uid/gid, so I could not do this properly with
	setuid-mode.  However, the resulting rewrite is simpler...

1991-10-25  ste_cm@software.org

	* src/checkin/src/checkin.c: BASELINE Fri Oct 25 15:31:36 1991

1991-10-25  dickey@software.org

	* src/checkin/src/checkin.c: debug-traces
	moved file-ownership (for working-file) before chmod

1991-10-24  dickey@software.org

	* src/checkin/src/checkin.c:
	two corrections to 'GetLock()' -- from testing sccs2rcs
	1) added cases for exiting from header (was reading past)
	2) added logic to set 'lock_date' even if no locks were
	   found (assumes "-f" option), since this is used to control
	   the use of the "-d" option.

1991-10-22  dickey@software.org

	* src/checkin/src/checkin.c:
	correction to initial access-list (if we are running as
	root-setuid, must use the directory-owner instead of "root")

	* src/vcs/test/run_test.sh: make this work ok in batch-mode

1991-10-22  ste_cm@software.org

	* src/vcs/test/run_test.sh:
	BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

	* src/vcs/test/run_test.sh: BASELINE Tue Oct 22 12:35:33 1991

1991-10-22  dickey@software.org

	* src/checkup/test/run_test.sh:
	modified so this will run in batch-mode on SunOs (cannot open /dev/tty)

1991-10-22  ste_cm@software.org

	* src/checkup/test/run_test.sh:
	BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

	* src/checkup/test/run_test.sh: BASELINE Tue Oct 22 10:35:37 1991

1991-10-22  dickey@software.org

	* src/checkin/src/checkin.c: